<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.MainActivity">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtName"
            app:layout_constraintStart_toStartOf="@+id/fotoButton"
            app:layout_constraintEnd_toEndOf="@+id/fotoButton"
            android:hint="@string/edt_name"
            app:layout_constraintHorizontal_bias="0.449" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/fotoButton"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCreateGroup"
            android:text="@string/btn_createGroup" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/edtName" app:layout_constraintStart_toStartOf="@+id/edtName"
            app:layout_constraintEnd_toEndOf="@+id/edtName" app:layout_constraintHorizontal_bias="0.477"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnJoinGroup"
            android:text="@string/btn_joinGroup" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCreateGroup"
            app:layout_constraintStart_toStartOf="@+id/btnCreateGroup"
            app:layout_constraintEnd_toEndOf="@+id/btnCreateGroup" app:layout_constraintHorizontal_bias="1.0"/>
    <ImageButton
            android:layout_width="200dp"
            android:layout_height="200dp" tools:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/fotoButton"
            android:cropToPadding="false"
            android:scaleType="fitXY" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/edtName" app:layout_constraintVertical_bias="0.464"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:background="@drawable/ic_launcher_background"/>
</android.support.constraint.ConstraintLayout>